--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.password=123
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto = none
 logging.level.root=warn
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
